# mandlebrot

./: .gitignore  CMakeLists.txt  README.md  Universe.sln
Universe/: Universe.vcxproj  main.cpp
src/: CMakeLists.txt  main.cpp
